[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onramp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aerich>=0.9.1",
    "starlette>=0.47.3",
    "tortoise>=0.1.1",
    "uvicorn>=0.35.0",
    "watchfiles>=1.1.0",
]

[project.scripts]
onramp = "onramp.cli:main"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# include config.toml, static assets, and template JS/TSX
[tool.setuptools.package-data]
"onramp" = [
  "config.toml",
  "static/*",
  "static/**/*",
  "templates/*"
]
